Ticket #7495 - Hide address is not allowed when organization is set.

--- a/pyfred/unittests/domainbrowser/dbdata/contact.yaml
+++ b/pyfred/unittests/domainbrowser/dbdata/contact.yaml
@@ -99,7 +99,7 @@
       data: null
       response:
       - - [64]
-01ae0a1ea9a7f9d07375d8711b8556bb:
+b9b42dd505943d5d31120685495f9de0:
   query: |-
     SELECT
                     contact.discloseemail,
@@ -108,7 +108,8 @@
                     contact.disclosefax,
                     contact.discloseident,
                     contact.disclosevat,
-                    contact.disclosenotifyemail
+                    contact.disclosenotifyemail,
+                    organization
                 FROM contact
                 JOIN object_registry oreg ON oreg.id = contact.id
                 WHERE id = %(contact_id)d
@@ -117,8 +118,8 @@
     b6149dfd560aaa1ef2eede08ef62e963:
       data: {contact_id: *id001}
       response:
-      - - [true, true, true, false, false, false, false]
-      - - [true, false, true, false, false, false, true]
+      - - [true, true, true, false, false, false, false, null]
+      - - [true, false, true, false, false, false, true, null]
 56a3e8a61f98892eec571411de6d9eb2:
   query: |-
     SELECT
