--- a/pyfred/unittests/domainbrowser/dbdata/nsset.yaml
+++ b/pyfred/unittests/domainbrowser/dbdata/nsset.yaml
@@ -12,6 +12,12 @@
         states: [23]
       response:
       - - [!!python/long '1']
+    3a7febd324f545a52b838d00f9d8d1dd:
+      data:
+        object_id: *id004
+        states: [24]
+      response:
+      - - [!!python/long '1']
 0dad6432fb8bcfa4359e5029fc440dd3:
   query: |-
     SELECT
