--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [bdist_rpm]
-requires=python-omniORB, omniORB-servers, python-clearsilver, postgresql-python, python-dns, ldns
+requires=python-omniORB, omniORB-servers, python-clearsilver, postgresql-python, python-dns, ldns, postfix
 build-requires=python-omniORB, omniORB-devel, fred-distutils, fred-idl
 install-extra-opts=--prefix=/usr --install-sysconf=/etc --install-localstate=/var --no-check-deps
