Add comments to configuration file (import from Lena)

--- a/conf/pyfred.conf
+++ b/conf/pyfred.conf
@@ -1,77 +1,205 @@
+###############################################################################
+#                        PYFRED Configuration File                            #
+###############################################################################
 #
-# Configuration file of pyfred
-#
-# The detailed description of configuration may be found in README, consider
-# reading it before you make any changes to this file. Note that this is a
-# default configuration, which might work or not depending on many circumstances
+# The detailed description of configuration can be found in README. Consider
+# reading it before you make any changes to this file.
+# Note that this is the default configuration which might work (or not)
+# depending on many circumstances
 # (i.e. location of postgresql server, nameservice, ...)
 
-#
-# basic configuration of pyfred
-#
+###
+### Basic configuration of PYFRED
+###
+# These settings are common to all modules.
 [General]
+# List of modules to load (separated by spaces)
 modules=MODULES
-dbuser=DBUSER
-dbname=DBNAME
-dbhost=DBHOST
-dbport=DBPORT
-dbpassword=DBPASS
-port=PYFREDPORT
-nscontext=NSCONTEXT
-nshost=NSHOST
-nsport=NSPORT
+# pidfile is the file where the server records its process id
 pidfile=PIDFILE
-# Log handler selection
-# syslog  (see logfacility option also)
-# file    (see logfilename option also)
-# console (can be used only if server is not demonized after start)
+# Host where PYFRED listens for CORBA calls
+# (empty value binds PYFRED to all available IP addresses)
+#host=
+# Port where PYFRED listens for CORBA calls
+port=PYFREDPORT
+
+#### Database settings
+# Database host or empty value for Unix socket
+dbhost=DBHOST
+# Database port
+dbport=DBPORT
+# Database name
+dbname=DBNAME
+# Database user name
+dbuser=DBUSER
+# Database password (if required)
+dbpassword=DBPASS
+
+#### CORBA nameservice settings
+# Nameservice host
+nshost=NSHOST
+# Nameservice port
+nsport=NSPORT
+# Nameservice context (check with the ``namectl`` command)
+nscontext=NSCONTEXT
+
+#### Logging settings
+# Log handler selection:
+# * syslog  (see also logfacility option)
+# * file    (see also logfilename option)
+# * console (can be used only if server is not daemonized after start)
 loghandler=file
+# Log level
+# * debug
+# * info
+# * notice
+# * warning
+# * error
+# * critical
+# * alert
+# * emerg
 loglevel=debug
-logfacility=local1
+# Specify syslog facility (if handler is syslog)
+#logfacility=local1
+# Specify log file (if handler is a file)
 logfilename=LOGFILENAME
 
-#
-# configuration of zone generator
-#
+###
+### Zone-generating module configuration
+###
 [Genzone]
-# default configuration kept
+# DS record digest algorithm sha1|sha256
+#   default: sha1
 dsrecord_algo = sha1
 
-#
-# configuration of mailer module
-#
-[Mailer]
-testmode=on
-tester=
-sendmail=SENDMAIL
-filemanager_object=FileManager
-signing=off
-signing_cmd_retry_rounds=100
-sendperiod=30
-# limit for number of emails send in one period
-sendlimit=100
-# Enable vcard attachment. To each email is added text/x-vcard attachemnt
-# Do NOT turn this off! (Outlook express cannot open multipart emails containing
-# only single part). When vcard is turned on, we are sure that this never happens
-vcard=on
-# disable checks for undelivered messages
-undeliveredperiod=0
+#### CORBA objects lifetime settings
+# Timeout (seconds) after which objects are considered idle
+#   default: 3600
+#idletreshold=3600
+# Interval (seconds) between checks for idle objects
+#   default: 60
+#checkperiod=60
 
-#
-# configuration of a module which manages files
-#
+
+###
+### Mailing module configuration
+###
+[Mailer]
+# In the test mode, all emails are sent to tester's email address instead
+# of the appropriate recipient.
+#   default: off
+testmode=on
+# Tester's email address (only for the test mode)
+# If left empty, emails are discarded and archived in the database.
+#   default: empty
+tester=
+# Path to sendmail binary (or a compatible program)
+#   default: /usr/sbin/sendmail
+sendmail=SENDMAIL
+# The mailer module is dependent on file managing services. Set this
+# to the name under which this object is accessible in the CORBA nameservice.
+# Format: [contextName.]ObjectName
+#   default: fred.FileManager
+filemanager_object=FileManager
+# Turn on/off cryptographic signatures
+#   default: off
+signing=off
+# Signing is done by running external command (openssl). This option defines
+# how many rounds (for simplicity 1 round ~ 1 s) should we wait for command output
+# before subprocess is killed.
+#   default: 8
+signing_cmd_retry_rounds=100
+# Path to the binary that will be used to sign emails
+#   default: /usr/bin/openssl
+#openssl=/usr/bin/openssl
+# Path to certificate and key (for email signatures)
+#? certfile_nic_cz=/etc/fred/cert/podpora.pem
+#? keyfile_nic_cz=/etc/fred/cert/podpora.key
+#? certfile_mojeid_cz=/etc/fred/cert/podpora_mojeid.pem
+#? keyfile_mojeid_cz=/etc/fred/cert/podpora_mojeid.key
+# Interval (seconds) between sending email bulks
+sendperiod=30
+# Limit for the number of emails sent in one bulk
+sendlimit=100
+# If enabled, a text/x-vcard attachment is added to each email.
+# Do NOT turn this off! (Outlook Express cannot open multipart emails
+# if they contain only a single part.) When vcard is turned on, we are sure
+# that this never happens.
+vcard=on
+# Enable manual confirmation of emails submission. Emails will not be
+# sent until manually confirmed (which is acomplished by changing status in
+# mail archive table) if this is turned on.
+manconfirm=off
+# Maximum number of attempts to send email in case of a failure
+maxattempts=3
+# Interval (seconds) between mailbox checks for undelivered messages (0=disable)
+#   default: 0
+undeliveredperiod=0
+# Username for IMAP account
+#IMAPuser=
+# Password for IMAP account
+#IMAPpass=
+# Host and optional port where IMAP daemon runs
+#IMAPserver=
+# Use secure connection
+#IMAPssl=yes
+
+#### CORBA objects lifetime settings
+# Timeout (seconds) after which objects are considered idle
+#idletreshold=3600
+# Interval (seconds) between checks for idle objects
+#checkperiod=60
+
+###
+### File-managing module configuration
+###
 [FileManager]
+# Absolute path of the directory to store managed files
 rootdir=FILEMANAGERFILES
 
-#
-# configuration of module executing technical checks
-#
-[TechCheck]
-scriptdir=TECHCHECKSCRIPTDIR
-msgLifetime=7
-queueperiod=5
-oldperiod=30
-missrounds=10
-drill=DRILL
-trusted_key=
+#### CORBA objects lifetime settings
+# Timeout (seconds) after which objects are considered idle
+#idletreshold=3600
+# Interval (seconds) between checks for idle objects
+#checkperiod=60
 
+###
+### Technical-checks-executing module configuration
+###
+[TechCheck]
+# Test mode disables test execution (level 0 is assumed for all tested nssets)
+#testmode=off
+# Allow background perodic checks (in addition to checks requested by clients)
+#periodic_checks=on
+# Directory that contains scripts for technical tests
+scriptdir=TECHCHECKSCRIPTDIR
+# Service life of techcheck poll message (days)
+msgLifetime=7
+# Treshold (days) after which a tech.check is considered out-dated
+oldperiod=30
+# Interval (seconds) between runs of queues inspection procedure. If the queue of asynchronously
+# scheduled check is emtpy, a new regular check is enqueued (depends on periodic_checks
+# and missround settings)
+queueperiod=5
+# If there was no candidate for regular check, this number of rounds (queue inspection
+# procedure runs), SQL query of looking for another candidate will not be issued (load optimization)
+missrounds=10
+# Path to the drill utility (part of ldns-utils) used for a dnssec related
+# technical test (key chase)
+#   default: /usr/bin/drill
+drill=DRILL
+# Trusted key to be used by the drill utility for a signature chase run
+# (NOTE: actually if not set, dnssec signature chase test cannot be run)
+trusted_key=
+# The tech.check module is dependent on mailing services. Set this
+# to the name under which this object is accessible in the CORBA nameservice.
+# Format: [contextName.]ObjectName
+mailer_object=Mailer
+# This is a type of email which is used when sending emails through mailer.
+#mailtype=techcheck
+
+#### CORBA objects lifetime settings
+# Timeout (seconds) after which objects are considered idle
+#idletreshold=3600
+# Interval (seconds) between checks for idle objects
+#checkperiod=60
