Ticket #14862 - fixed install command to get over installation without drill and sendmail

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [bdist_rpm]
-requires=python-omniORB, omniORB-servers, python-clearsilver, postgresql-python, python-dns, ldns, postfix, m2crypto
+requires=python-omniORB, omniORB-servers, python-clearsilver, postgresql-python, python-dns, ldns, ldns-utils, postfix, m2crypto
 build-requires=python-omniORB, omniORB-devel, fred-distutils, fred-idl, m2crypto
-install-extra-opts=--prefix=/usr --install-sysconf=/etc --install-localstate=/var --no-check-deps
+install-extra-opts=--prefix=/usr --install-sysconf=/etc --install-localstate=/var --no-check-deps --drill=/usr/bin/drill --sendmail=/usr/sbin/sendmail
