Ticket #15971 - Added comments to configuration file

--- a/conf/genzone.conf
+++ b/conf/genzone.conf
@@ -1,6 +1,8 @@
-#
-# Examplar configuration file of genzone client
-#
+###############################################################################
+#                   Genzone Client Configuration File                         #
+###############################################################################
+# This is an example of configuration.
+# The description of configuration options can be found in the README file.
 
 [general]
 # host[:port]
@@ -8,7 +10,7 @@ nameservice= NAMESERVICE
 context   = CONTEXT
 reload    = 1
 verbose   = 0
-# if empty all zones will be generated
+# if empty, all zones will be generated
 zones     =
 
 #[0.2.4.e164.arpa]
