Ticket #15971 - Added proper config comments

--- a/conf/genzone.conf
+++ b/conf/genzone.conf
@@ -4,23 +4,54 @@
 # This is an example of configuration.
 # The description of configuration options can be found in the README file.
 
+###
+### General settings
+###
 [general]
-# host[:port]
+# CORBA nameservice address (host[:port])
 nameservice= NAMESERVICE
+# CORBA nameservice context (default: fred)
 context   = CONTEXT
+# ???
 reload    = 1
+# If the client should be verbose when generating zones (boolean)
 verbose   = 0
-# if empty, all zones will be generated
+# Space-separated list of zones for which zone files will be generated
+#   (if empty, all zones will be generated)
+# For example:
+#   zones = cz 0.2.4.e164.arpa
 zones     =
 
+###
+### Zone-specific settings - example of an ENUM zone
+###
+# Zone's FQDN as section identifier
 #[0.2.4.e164.arpa]
+# Amount of domains transferred in one CORBA call
 #chunk     = 3
+# Maximum of changed records between the old and the new zone file:
+# * negative number - no limit
+# * positive number - absolute count
+# * number with % - percent change
 #maxchanges= 30
+# Directory path of the backup of the old zone file (default: same as zonedir)
 #backupdir = ZONEBACKUPDIR/0.2.4.e164.arpa
+# Directory path to place the new zone file (default: the current directory)
 #zonedir   = /etc/bind
 
+###
+### Zone-specific settings - example of a TLD zone
+###
+# Zone's FQDN as section identifier
 #[cz]
+# Amount of domains transferred in one CORBA call
 #chunk     = 100
+# Maximum of changed records between the old and the new zone file:
+# * negative number - no limit
+# * positive number - absolute count
+# * number with % - percent change
 #maxchanges= 10%
+# Directory path of the backup of the old zone file (default: same as zonedir)
 #backupdir = ZONEBACKUPDIR/cz
+# Directory path to place the new zone file (default: the current directory)
 #zonedir   = /etc/bind
