Ticket #21193 - Isort imports

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,17 @@
 stages:
     - analysis
 
+########################################################################################################################
+# Basic declarations
+.requires-python: &requires-python
+    tags:
+        - python
+
 .python2-xenial: &python2-xenial
     image: $CI_REGISTRY/ginger/base/ubuntu_xenial_python2:latest
 
+########################################################################################################################
+# Individual jobs
 licensing:
     <<: *python2-xenial
     stage: analysis
@@ -11,3 +19,12 @@ licensing:
         - git clone git@gitlab.office.nic.cz:internal-tools/license-check.git --single-branch --depth 1
     script:
         - ./license-check/license-check.sh -v
+
+isort:
+    <<: *requires-python
+    <<: *python2-xenial
+    stage: analysis
+    before_script:
+        - pip install isort
+        - pip list
+    script: "make check-isort"
