--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 include INSTALL
 include ChangeLog
 include MANIFEST.in
-include contrib/fedora/fred-pyfred.spec
+include contrib/fedora/*
 include misc/*
 include misc/mailer_examples/*
